# airdrop

./: Anchor.toml  README.md  package.json
.github/workflows/: ci-anchor.yml  ci-cargo_audit.yml  ci-lint.yml  ci-soteria.yml  ci-ssh.yml  ci-verified.yml
programs/airdrop/: Cargo.toml
programs/airdrop/src/: common.rs  constants.rs  errors.rs  lib.rs
programs/airdrop/src/instructions/: claim.rs  close.rs  configure.rs  mod.rs
programs/basic_verifier/: Cargo.toml
programs/basic_verifier/src/: lib.rs
programs/dual_airdrop/: Cargo.toml
programs/dual_airdrop/src/: common.rs  constants.rs  lib.rs
programs/dual_airdrop/src/instructions/: claim.rs  configure.rs  mod.rs
programs/merkle_verifier/: Cargo.toml
programs/merkle_verifier/src/: common.rs  lib.rs
programs/merkle_verifier/src/instructions/: claim.rs  init.rs  mod.rs  verify.rs
programs/orca_verifier/: Cargo.toml
programs/orca_verifier/src/: common.rs  lib.rs
programs/orca_verifier/src/instructions/: claim.rs  init.rs  mod.rs
programs/password_verifier/: Cargo.toml
programs/password_verifier/src/: lib.rs
programs/sol_airdrop/: Cargo.toml
programs/sol_airdrop/src/: lib.rs
programs/sol_airdrop/src/instructions/: close.rs
tests/: .eslintrc.js  airdrop.ts  basic_verifier.ts  governance_verifier.json  merkle_verifier.ts  orca_verifier.ts  password_verifier.ts
tests/utils/: balance_tree.ts  merkle_tree.ts  utils.ts
