[package]
name = "airdrop"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "airdrop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0" }
anchor-spl = { version = "0.26.0" }
solana-program = "1.13.5"
static_assertions = "1.1"