[package]
name = "basic_verifier"
version = "0.1.0"
description = "Demo example of an airdrop verifier"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
sol-airdrop = { path = "../sol_airdrop", features = ["cpi"] }
anchor-lang = { version = "0.26.0" }
anchor-spl = { version = "0.26.0" }
solana-program = "1.13.5"