[package]
name = "dual-airdrop"
version = "0.0.3"
description = "Airdrop tool built by Dual Finance"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "dual_airdrop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0" }
anchor-spl = { version = "0.28.0" }
solana-program = "1.13.5"