[package]
name = "merkle_verifier"
version = "0.1.0"
description = "Example of a merkle proof verifier for dual-airdrop"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
dual-airdrop = { version = "0.0.3", features = [ "no-entrypoint", "cpi"] }
anchor-lang = { version = "0.27.0" }
anchor-spl = { version = "0.26.0" }
solana-program = "1.13.5"