[package]
name = "orca_verifier"
version = "0.1.0"
description = "Verify a liquidity position in orca"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orca_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
dual-airdrop = { version = "0.0.3", features = [ "no-entrypoint", "cpi"] }
anchor-lang = { version = "0.26.0" }
anchor-spl = { version = "0.26.0" }
solana-program = "1.13.5"
whirlpool = { git = "https://github.com/orca-so/whirlpools", tag = "0.11.3", package = "whirlpool", features = ["cpi"] }
