[package]
name = "sol-airdrop"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_airdrop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0" }
anchor-spl = { version = "0.26.0" }
solana-program = "1.13.5"